# ne_kidaem

./: .gitignore  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  example.env  pyproject.toml  requirements.txt  setup.cfg
ne_kidaem/: db.sqlite3  manage.py
ne_kidaem/api/: admin.py  constants.py  serializers.py  urls.py  views.py
ne_kidaem/blog/: models.py
ne_kidaem/blog/migrations/: 0001_initial.py  0002_alter_blog_user_alter_post_blog.py  0003_alter_blog_options_alter_post_options_and_more.py  0004_remove_post_blog_remove_subscription_target_blog_and_more.py  0005_readpost_post_blog_post_created_b20a1e_idx_and_more.py  0006_alter_readpost_user_likepost.py
ne_kidaem/core/: celery_conf.py  data_generate.py  tasks.py
ne_kidaem/ne_kidaem/: asgi.py  settings.py  urls.py  wsgi.py
ne_kidaem/tests/: tests_views.py
